# oesr

./: README.md  flake.nix  oesr-second.py  oesr.py  oesr_usb_setup.py  pyproject.toml  sss-cli.nix
docs/: .development.md.swp  DESIGN.md  HACKING.md  development.md
live-cd/: flake.nix  live-cd.nix
media/: ssss-split-graph.txt
scripts/: create-new-secret-backup.py  gen-private-key-share-distribution-graph.py
sss-cli/: cargo.patch  default.nix
